правки моделей
